kubernetes-intro/pod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: homework
  labels:
    name: mypod
spec:
  volumes:
    - name: shared-volume
      emptyDir: {}
    - name: nginx-config-volume
      configMap:
        name: nginx-config
  containers:
    - name: web-server
      image: nginx:alpine
      ports:
        - containerPort: 8000
      volumeMounts:
        - name: shared-volume
          mountPath: /homework
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      lifecycle:
        preStop:
          exec:
            command:
              - /bin/sh
              - -c
              - |
                rm -f /homework/index.html
---

apiVersion: v1
kind: Service
metadata:
  name: srv-mypod
  namespace: homework
spec:
  selector:
    name: mypod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: homework
spec:
  ingressClassName: traefik
  rules:
    - host: mypod.my.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: srv-mypod
                port:
                  number: 80
